corrected spacing of properties and company logo. Reloaded fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Merriweather+Sans|Shadows+Into+Light|Yanone+Kaffeesatz');
+
 * {
   box-sizing: border-box;
 }
@@ -15,7 +16,6 @@ body {
 .navbar {
   background-color: #F4CF84;
   color: #FFF; 
-  cursive;
   text-transform: uppercase;
 }
 
@@ -25,8 +25,14 @@ body {
   font-size: 30px;
 }
 
+.company-name {
+    padding-left: 5px;
+    height: 45px;
+    background: green;
+    
+}
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 362px) {
     .company-name {
         display: none;
     }
@@ -114,6 +120,9 @@ p {
   margin: auto;
 }
 
+.feature {
+  margin-bottom: 30px;
+}
 
 #jumbotron-property1 {
   background-image: url("../images/property1-1.jpg");
@@ -207,6 +216,17 @@ h1 {
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%)
 }
+@media only screen and (max-width: 440px) {
+    #contactForm {
+        width: 300px;
+    }
+    .textarea {
+      width: 200px;
+    }
+    .input {
+      width: 200px;
+    }
+}
 
 input,
 textarea {
@@ -216,7 +236,8 @@ textarea {
   font-size: inherit;
 
   display: block;
-  width: 280px;
+  max-width: 280px;
+  width: 100%;
   padding: .4em;
 }
 
